[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/characters/zombie.fbx" type="PackedScene" id=1]
[ext_resource path="res://UI/HealthBar3D.tscn" type="PackedScene" id=2]
[ext_resource path="res://Bots/Bot.gd" type="Script" id=3]
[ext_resource path="res://Bots/EnemyWeaponSwitcher.gd" type="Script" id=4]
[ext_resource path="res://assets/characters/vest.obj" type="ArrayMesh" id=5]
[ext_resource path="res://assets/materials/lowpoly_material.tres" type="Material" id=6]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.25, 0.75, 0.25 )

[node name="Bot" type="KinematicBody"]
script = ExtResource( 3 )

[node name="Model" parent="." instance=ExtResource( 1 )]
transform = Transform( -100, 0, -3.89414e-05, 0, 100, 0, 3.89414e-05, 0, -100, 0, 0, 0 )

[node name="WeaponSwitcher" type="Spatial" parent="."]
script = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0 )
shape = SubResource( 1 )

[node name="Sightline" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.765074, 0 )
enabled = true
cast_to = Vector3( 0, 0, -500 )

[node name="WeaponSightline" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.765074, 0 )
enabled = true
cast_to = Vector3( 0, 0, -500 )

[node name="HealthBar" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.81946, 0 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]

[node name="Vest" type="Spatial" parent="."]
visible = false

[node name="Vest" type="MeshInstance" parent="Vest"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, 0 )
mesh = ExtResource( 5 )
material/0 = ExtResource( 6 )

[node name="ReloadingBar" type="Spatial" parent="."]
visible = false
